Don't return NS_OK in failure cases. Instead, return a well-known value that nsGlobalWindow can convert. bug 382196, r+sr=jst